--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <script src="demineur.js"></script>
     </head>
     <body oncontextmenu="return false;">
+        <p class="title">LE DEMINEUR DES TURBO BG</p>
 
         <h1 id="time">0</h1>
     
